--- a/services/frontend/index.html
+++ b/services/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/gif" href="/src/majorgainz/assets/major_gainz_transparent.gif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quick Origins POC</title>
+    <title>Major Gainz</title>
   </head>
   <body>
     <div id="root"></div>
